--- a/base-project/style.css
+++ b/base-project/style.css
@@ -1,11 +1,11 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Newsreader:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Newsreader', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     margin : 0;
 }
