--- a/base-project/style.css
+++ b/base-project/style.css
@@ -1,11 +1,10 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Nanum Gothic', sans-serif;
     margin : 0;
 }
