--- a/starbucks/css/style.css
+++ b/starbucks/css/style.css
@@ -8,6 +8,7 @@ body {
   font-weight: 400;
   line-height: 1.4;
   font-family: 'Nanum Gothic', sans-serif;
+  height: 3000px;
 }
 
 img {
@@ -24,10 +25,76 @@ a {
   position: relative;
 }
 
+.btn {
+  width: 130px;
+  padding: 10px;
+  border: 2px solid #333;
+  border-radius: 4px;
+  color: #333;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: 0.4s;
+}
+
+.btn:hover {
+  background-color: #333;  
+  color : #fff;
+}
+
+.btn.btn--reverse {
+  background-color: #333;
+  color : #fff;  
+}
+
+.btn.btn--reverse:hover {
+  background-color:transparent;
+  color : #333;
+}
+
+.btn.btn--brown {
+  color : #592B18;
+  border-color: #592B18;  
+}
+
+.btn.btn--brown:hover {
+  color :#fff;
+  background-color: #592B18;
+}
+
+.btn.btn--gold {
+  color : #D9AA8A;
+  border-color: #D9AA8A;
+}
+
+.btn.btn.btn--gold:hover {
+  color : #fff;
+  background-color: #D9AA8A;
+}
+
+.btn.btn--white {
+  color : #fff;
+  border-color: #fff;
+}
+
+.btn.btn--white:hover {
+  color : #333;
+  background-color: #fff;
+}
+
+
 /* HEADER */
 header {
+  width: 100%;
+  position: fixed;
   background-color: #f6f5f0;
   border-bottom: 1px solid #c8c8c8;
+  top : 0;
+  z-index : 9;
+
 }
 
 
@@ -207,4 +274,76 @@ header .main-menu .item .item__contents .contents__texture h4 {
 header .main-menu .item .item__contents .contents__texture p {
   color:#669900;
   margin : 4px 0 14px;
+}
+
+header .badges {
+  position: absolute;
+  top :123px;
+  right: 12px;
+}
+
+
+header .badges .badge {
+  border-radius: 10px;
+  overflow:hidden;  
+  margin-bottom: 12px;
+  box-shadow: 4px 4px 10px rgba(0,0,0,0.15);
+  cursor: pointer;
+}
+
+/* VISUAL */
+.visual {
+  margin-top: 120px;
+  background-image: url('../images/visual_bg.jpg');
+  background-position: center;
+}
+
+.visual .inner {
+  height: 646px;
+}
+
+.visual .title {
+  position: absolute;
+  top:88px;
+  left : -10px;
+}
+
+.visual .title .btn {
+  position: absolute;
+  top: 259px ; 
+  left : 173px;
+}
+
+.visual .cup1.image {
+  position: absolute;
+  top:0;
+  right: -47px;
+}
+
+.visual .cup1.text {
+  position: absolute;
+  top: 38px;
+  right: 171px;
+}
+
+.visual .cup2.image {
+  position: absolute;
+  bottom: 0;
+  right: 162px;
+}
+
+.visual .cup2.text {
+  position: absolute;
+  top: 321px;
+  right: 416px;
+}
+
+.visual .spoon {
+  position: absolute;
+  bottom: 0;
+  left: 275px;
+}
+
+.visual .fade-in {
+  opacity: 0;
 }
